<resources>
    <string name="app_name">TaskManagerKanban</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="empty_box">You dont have any task...</string>
    <string name="title_txt">title</string>
    <string name="description_txt">Description</string>
    <string name="done_txt">Done</string>
    <string name="todo">todo</string>
    <string name="doing">doing</string>
    <string name="save">save</string>
    <string name="cancel">cancel</string>
    <string name="edit">edit</string>
    <string name="delete">delete</string>
    <string name="login_txt">login</string>
    <string name="sign_up">sign up</string>
    <string name="userName">user name</string>
    <string name="passWord">pass word </string>
    <string name="re_passWord">repeat pass word</string>
    <string name="fill_please">please fill all inputs.</string>
    <string name="wrong_user_info">wrong user name or pass word</string>
    <string name="no_task_manager">no task dear Manager!</string>
    <string name="report_message">%1$s!
        %2$s.
        This task is %3$s , and set on %4$s.
    </string>
</resources>