<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:padding="16dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title_txt"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/title_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:hint="@string/description_txt"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/desc_dialog"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:textColor="#000"
        android:id="@+id/date_dialog"
        android:hint="Sep 06,2019"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/red_700"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:textColor="#000"
        android:id="@+id/clock_dialog"
        android:hint="1:09 PM"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/red_700"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <RadioGroup

        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/todo_add_radioBtn"
            android:text="@string/todo"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/doing_add_radioBtn"
            android:text="@string/doing"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/done_add_radioBtn"
            android:text="@string/done_txt"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </RadioGroup>
    <LinearLayout
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <androidx.appcompat.widget.AppCompatTextView
            android:clickable="true"
            android:gravity="center"
            android:id="@+id/cancel_btn"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:gravity="center"
            android:id="@+id/save_btn"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/save"
            android:clickable="true"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>



    </LinearLayout>






</LinearLayout>