<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:padding="16dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title_txt"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/title_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:hint="@string/description_txt"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/desc_dialog"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/date_dialog"
        android:hint="Sep 06,2019"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/red_700"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/clock_dialog"
        android:hint="1:09 PM"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/red_700"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/checkbox_dialog"
        android:text="@string/done_txt"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>





</LinearLayout>